# pico-midi-pot

./: CMakeLists.txt  README.md  midi_pot_micropython.py  pico-midi-pot.c
